...
    <string name="invalid_first">Invalid First Name</string>
    <string name="invalid_last">Invalid Last Name</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_user">Invalid Username</string>
    <string name="invalid_occu">Invalid Occupation</string>
    <string name="invalid_desc">Invalid Description</string>
    <string name="invalid_dob">Must be over 18</string>

    <string name="invalid_distance">Distance must be between 0 and 50</string>
    <string name="invalid_age_range">Check your Min and Max</string>
    <string name="invalid_privacy">Privacy must be Private or Public</string>

    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
...

    <string name="desc_dean">I\'m learning Excel</string>
    <string name="desc_troy_abed">Troy and Abed in the Morning</string>
    <string name="desc_magnitude">Pop Pop!</string>
    <string name="desc_britta">I lived in New York</string>
    <string name="appTitle">Greendale Friend Finder</string>
    <string name="testFirstName">Ben</string>
    <string name="testLastName">Chang</string>
    <string name="testEmail">ELTigre@greendalecollege.edu</string>
    <string name="testOccupation">Spanish Teacher</string>
    <string name="testDescription">I am a man who can never die</string>
    <string name="you_liked">"You Liked "</string>
    <string name="you_unliked">"You Unliked "</string>

    <string name="listenerError"> must implement LikeClickListener</string>

    <string name="reminder_hint">Ex. 6:00</string>
...
    <string name="invalid_settings">Please recheck entered settings</string>
    <string name="fifty_mi">50</string>
    <string name="invalid_age">Must input Min and Max age</string>
    <string name="eighteen">18</string>
    <string name="thirty">30</string>
    <string name="zero">0</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="test_email_1">test@test.com</string>
    <string name="test_email_2">test@test.net</string>
    <string name="test_email_3">t@g.com</string>
    <string name="test_email_4">r@g.com</string>
    <string name="test_email_5">r@o.com</string>
    <string name="pressed_location">Location has been pressed</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="gps_provider_started_running">GPS provider started running</string>
    <string name="gps_provider_update">GPS Provider update</string>
    <string name="test_email_6">e@c.com</string>
    <string name="match">match</string>
    <string name="phone">phone</string>
    <string name="sign_in">Sign in</string>
</resources>

