<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profile_photo"
        tools:context=".ProfileActivity">

        <TextView
            android:id="@+id/textViewProfileUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/my_value15"

            android:text="@string/username"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/my_value4"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageViewProfilePhoto"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/profile_w"

            android:src="@drawable/chang"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileUsername" />

        <TextView
            android:id="@+id/textViewProfileFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value6"
            android:layout_marginStart="@dimen/my_value6"
            android:text="@string/first_name"
            android:textSize="@dimen/my_value4"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/imageViewProfilePhoto"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewProfileLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value6"
            android:layout_marginStart="@dimen/my_value6"
            android:text="@string/last_name"
            android:textSize="@dimen/my_value5"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileFirstName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewProfileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value6"
            android:layout_marginStart="@dimen/my_value6"
            android:text="@string/email"
            android:textSize="@dimen/my_value15"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileLastName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewProfileAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value6"
            android:layout_marginStart="@dimen/my_value6"
            android:text="@string/age"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileEmail"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewProfileOccupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value6"
            android:layout_marginStart="@dimen/my_value6"
            android:text="@string/occupation"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileAge"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewProfileDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value5"
            android:layout_marginStart="@dimen/my_value6"
            android:text="@string/description"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileOccupation"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewProfileThing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value3"
            android:layout_marginStart="@dimen/my_value6"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileDescription"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageBtnEdit"
            android:src="@drawable/edit_button"
            android:tint="@color/black"
            android:background="@color/light_blue"
            android:layout_width="@dimen/my_value3"
            android:layout_height="@dimen/my_value3"
            android:layout_marginEnd="@dimen/my_value5"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewProfilePhoto"
            app:layout_constraintEnd_toEndOf="@+id/imageViewProfilePhoto"
            android:contentDescription="@string/edit" />


        <Button
            android:id="@+id/BtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToMainActivity"
            android:text="@string/symbol"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->